Sat Mar  4 15:59:44 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Bah. Disabled zooming in fullscreen mode for now. I'll do the
	math and fix it later.
	* I think I'm gonna have to rewrite shedloads of it to support
	window resizing etc...

Sat Mar  4 14:46:42 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Fixed progressive loading in fullscreen mode. Those callbacks
	*are* on crack, but for them to make sense would be a big rewrite
	I don't have time for now =)
	* Unfortunately, zooming in fullscreen mode is broken, I'm looking
	at this now. Also, I get a weird segv when I do "feh -F directory"
	but not when I do "feh -F file" or "feh -F file1 file2", and not
	when I do "feh directory" or "feh -b directory" etc. I'm trying to
	work this out, but the fullscreen thing should be independent of
	the filelist thing...

Fri Mar  3 22:44:25 PST 2000  Michael Jennings <mej@eterm.org>

	* Added two new options.  --randomize will take the file list and
	rearrange it into a random order.  --full-screen or -F will create
	a screen-sized borderless window (akin to a screensaver) and will
	center the image within it.  NOTE:  At this point, full screen mode
	only works if you disable the progressive callback.  I'm waaaay too
	tired right now to try to make sense out of gilbertt's callback
	logic. :-)  I'll try to fix it this weekend if he doesn't beat me
	to it.
	
Wed Mar  1 15:13:04 PST 2000  Michael Jennings <mej@eterm.org>

	* Math lib
	
Sun Feb 20 15:22:00 2000  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Remove some crufty duplication.

Sat Feb 19 17:11:49 2000  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Reduced mem usage, tuned file handling. Tidied up.

Sat Feb 19 00:55:46 2000  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Added -b, --borderless option. Can you guess what it does?

Fri Feb 18 23:51:14 2000  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Well, if I wasn't so dumb, I'd have realised that my last